--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@trpc/client": "^11.9.0",
     "@trpc/react-query": "^11.9.0",
     "@trpc/server": "^11.9.0",
+    "@types/crypto-js": "^4.2.2",
     "@ungap/structured-clone": "^1.3.0",
+    "crypto-js": "^4.2.0",
     "expo": "~54.0.27",
     "expo-av": "~16.0.8",
     "expo-blur": "~15.0.8",
